force-app/main/default/objects/Navigation_Carousel__c/Navigation_Carousel__c.object-meta.xml
<CustomObject>
    <label>Navigation Carousel</label>
    <nameField>
        <label>Navigation Carousel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigation Carousels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>