force-app/main/default/objects/Navigation_Carousel__c/fields/IconSize__c.field-meta.xml
<CustomField>
    <fullName>IconSize__c</fullName>
    <description>The size of the icon. Options include xx-small, x-small, small, medium, or large. This value defaults to medium.</description>
    <inlineHelpText>The size of the icon. Options include xx-small, x-small, small, medium, or large. This value defaults to medium.</inlineHelpText>
    <label>IconSize</label>
    <length>20</length>
    <type>Text</type>
</CustomField>