force-app/main/default/objects/Navigation_Carousel__c/fields/Page_Size_Large__c.field-meta.xml
<CustomField>
    <fullName>Page_Size_Large__c</fullName>
    <description>Number of navigation items visible at a time when displayed in a large viewport like a desktop monitor</description>
    <inlineHelpText>Number of navigation items visible at a time when displayed in a large viewport like a desktop monitor</inlineHelpText>
    <label>Page Size Large</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>