force-app/main/default/objects/Navigation_Carousel__c/fields/Page_Size_Medium__c.field-meta.xml
<CustomField>
    <fullName>Page_Size_Medium__c</fullName>
    <description>Number of items per page when displayed in a medium size viewport such as a tablet</description>
    <inlineHelpText>Number of items per page when displayed in a medium size viewport such as a tablet</inlineHelpText>
    <label>Page Size Medium</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>