force-app/main/default/objects/Navigation_Carousel__c/fields/Page_Size_Small__c.field-meta.xml
<CustomField>
    <fullName>Page_Size_Small__c</fullName>
    <description>Number of items per page when displayed in a small viewport such as a phone</description>
    <inlineHelpText>Number of items per page when displayed in a small viewport such as a phone</inlineHelpText>
    <label>Page Size Small</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>